--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/router": "~13.0.0",
     "@ng-select/ng-select": "^8.1.1",
     "@ngneat/dialog": "^1.7.1",
+    "@ngrx/effects": "^13.1.0",
+    "@ngrx/store": "^13.1.0",
+    "@ngrx/store-devtools": "^13.1.0",
     "font-awesome": "^4.7.0",
     "remixicon": "^2.5.0",
     "rxjs": "~7.4.0",
