--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@ngrx/effects": "^13.1.0",
     "@ngrx/store": "^13.1.0",
     "@ngrx/store-devtools": "^13.1.0",
+    "@types/lodash": "^4.14.182",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.21",
     "remixicon": "^2.5.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
